err/nonstandard.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nonstandard'...
Listing './lib/python3.5/site-packages/nonstandard/core'...
Listing './lib/python3.5/site-packages/nonstandard/examples'...
Compiling './lib/python3.5/site-packages/nonstandard/examples/french.py'...
***   File "./lib/python3.5/site-packages/nonstandard/examples/french.py", line 2
    de math importe pi
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nonstandard/transformers'...
Listing './lib/python3.5/site-packages/nonstandard/transformers/utils'...
Listing './lib/python3.5/site-packages/nonstandard-0.9.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/decrement_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/decrement_testfile.py", line 5
    a--
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/french_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/french_testfile.py", line 5
    de math importe pi
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/function_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/function_testfile.py", line 4
    square = function x: x**2
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/increment_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/increment_testfile.py", line 5
    a++
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/multiple_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/multiple_testfile.py", line 6
    a--
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/multiple_transforms.py'...
***   File "./lib/python3.5/site-packages/tests/multiple_transforms.py", line 6
    a--
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/nobreak_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/nobreak_testfile.py", line 7
    nobreak:
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/pep542_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/pep542_testfile.py", line 7
    def MyClass.square(self, x):
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/print_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/print_testfile.py", line 16
    print "Hello World!"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/repeat_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/repeat_testfile.py", line 5
    repeat 4:
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/where_testfile.py'...
***   File "./lib/python3.5/site-packages/tests/where_testfile.py", line 8
    where:
         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
